--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-419.7KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-369.8KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇮🇳 印度-287.8KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇮🇳 印度-1.30MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-176.4KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇸🇬 新加坡-201.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇭🇰 香港-1.26MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-5.29MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-308.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-176.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-176.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-176.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-176.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-176.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-176.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-176.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
