--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-369.8KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇮🇳 印度-287.8KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-443.0KB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-3.60MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
+  - {name: 🇺🇸 美国-5.56MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
   - {name: 🇭🇰 香港-1.26MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
@@ -74,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
@@ -89,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
@@ -105,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
@@ -130,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-369.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-843.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-287.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
