--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-443.0KB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇳🇱 荷兰-3.60MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
-  - {name: 🇺🇸 美国-5.56MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇭🇰 香港-1.26MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.86MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
+  - {name: 🇫🇷 法国-1.24MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: tj-15.t8737.shop, port: 11223, type: trojan, password: afbba9fe-80f3-4fbd-837c-35ede864fea6, sni: tj-15.t8737.shop, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.29MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-308.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.58MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.37MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-443.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-308.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
